# grpc-client-examples

./: .gitignore  LICENSE  README.md  client.py  config.yaml.example  generate_certs.sh  pyproject.toml  server.py  service.proto  service_pb2.py  service_pb2_grpc.py
inventory/: hosts.yaml.example
